{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 58,
  "lineage": "1fcdea6c-7fd5-f79e-4943-e01d917b2cac",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772064073:security-group/sg-0fe2095bbe153b8dd",
            "description": "security groups for the applications",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "bastion_securitygroup"
                ]
              }
            ],
            "id": "sg-0fe2095bbe153b8dd",
            "name": "bastion_security_group",
            "tags": {
              "Name": "bastion_securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4820f73dfc38be5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "common_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772064073:security-group/sg-04bfee1261ff6cc5d",
            "description": "security groups for the applications",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Applicationtraffic"
                ]
              }
            ],
            "id": "sg-04bfee1261ff6cc5d",
            "name": "application_security_group",
            "tags": {
              "Name": "Applicationtraffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4820f73dfc38be5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "rds_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772064073:security-group/sg-09fa786b37e672d88",
            "description": "security groups for the applications",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "rds_Security_group"
                ]
              }
            ],
            "id": "sg-09fa786b37e672d88",
            "name": "rds_Security_group",
            "tags": {
              "Name": "rds_Security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4820f73dfc38be5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "data_subnet_db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772064073:subnet/subnet-0026da949d837ffd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "available_ip_address_count": 4091,
            "cidr_block": "195.0.80.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "common_datasubnet_db2"
                ]
              }
            ],
            "id": "subnet-0026da949d837ffd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772064073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "common_datasubnet_db2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f4820f73dfc38be5"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "datasubnet_db1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772064073:subnet/subnet-0c7405db085ded2d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "available_ip_address_count": 4090,
            "cidr_block": "195.0.64.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "common_datasubnet_db1"
                ]
              }
            ],
            "id": "subnet-0c7405db085ded2d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772064073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "common_datasubnet_db1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f4820f73dfc38be5"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "privatesubnet_app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772064073:subnet/subnet-0088eb4e522cb6432",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4089,
            "cidr_block": "195.0.32.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "common_privatesubnet_app1"
                ]
              }
            ],
            "id": "subnet-0088eb4e522cb6432",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772064073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "common_privatesubnet_app1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f4820f73dfc38be5"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_subnet_web_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772064073:subnet/subnet-0aadf2e9069b3e26c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4084,
            "cidr_block": "195.0.0.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "common_publicsubnet_web1"
                ]
              }
            ],
            "id": "subnet-0aadf2e9069b3e26c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "724772064073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "common_publicsubnet_web1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f4820f73dfc38be5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-064519b8c76274859",
            "arn": "arn:aws:ec2:us-east-1:724772064073:instance/i-0203c44dc7351a258",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0203c44dc7351a258",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "whizlabs",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-035d65906df8ae9f3",
            "private_dns": "ip-195-0-4-109.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "195.0.4.109",
            "public_dns": "ec2-3-85-85-41.compute-1.amazonaws.com",
            "public_ip": "3.85.85.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06cb2a27355adfa3c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aadf2e9069b3e26c",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Bastionhost",
              "Terraform": "true"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Bastionhost",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fe2095bbe153b8dd"
            ]
          },
          "dependencies": [
            "data.aws_security_group.bastion_host",
            "data.aws_subnet.public_subnet_web_az1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-064519b8c76274859",
            "arn": "arn:aws:ec2:us-east-1:724772064073:instance/i-0213c489bc97879a4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0213c489bc97879a4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "whizlabs",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dfb1c76e0d13acd5",
            "private_dns": "ip-195-0-13-165.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "195.0.13.165",
            "public_dns": "ec2-54-84-52-33.compute-1.amazonaws.com",
            "public_ip": "54.84.52.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04c139d335003bfc9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aadf2e9069b3e26c",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Nginx",
              "Terraform": "true"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Nginx",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04bfee1261ff6cc5d"
            ]
          },
          "dependencies": [
            "data.aws_security_group.common_app_sg",
            "data.aws_subnet.public_subnet_web_az1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "python",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-064519b8c76274859",
            "arn": "arn:aws:ec2:us-east-1:724772064073:instance/i-0588a4bc2b0e20aa8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0588a4bc2b0e20aa8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "whizlabs",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05e048507c9497832",
            "private_dns": "ip-195-0-43-254.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "195.0.43.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0040f853d240ae9c9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0088eb4e522cb6432",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Python",
              "Terraform": "true"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Python",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04bfee1261ff6cc5d"
            ]
          },
          "dependencies": [
            "data.aws_security_group.common_app_sg",
            "data.aws_subnet.privatesubnet_app1"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}